[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerkit"
version = "0.2.0"
description = "A Python implementation of the hledger plain-text accounting tool"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Topic :: Office/Business :: Financial :: Accounting",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]

[project.scripts]
ledgerkit = "ledgerkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledgerkit*"]

[tool.black]
line-length = 88
target-version = ["py38"]
