[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerkit"
version = "1.0.0.dev1"
description = "Python parser and library for hledger journal files — CLI tools, DataFrame export, and a clean data model for the Python ecosystem"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
keywords = [
    "hledger",
    "ledger",
    "accounting",
    "plain-text-accounting",
    "finance",
    "pandas",
]
classifiers = [
    "Topic :: Office/Business :: Financial :: Accounting",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]

[project.urls]
Homepage = "https://github.com/ctosullivan/ledgerkit"
Repository = "https://github.com/ctosullivan/ledgerkit"
"Bug Tracker" = "https://github.com/ctosullivan/ledgerkit/issues"
Changelog = "https://github.com/ctosullivan/ledgerkit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pandas = ["pandas>=1.3"]

[project.scripts]
ledgerkit = "ledgerkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledgerkit*"]

[tool.black]
line-length = 88
target-version = ["py38"]
